--- a/mystyle.css
+++ b/mystyle.css
@@ -1,5 +1,11 @@
 body {
   overflow-x: hidden;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
 
 .button {
@@ -52,7 +58,7 @@ body {
   padding-top: 5px;
 }
 
-.reccomended_videos {
+.recommended_videos {
   max-height: 5600px;
   overflow-y: hidden;
   background-color: aliceblue;
