--- a/mystyle.css
+++ b/mystyle.css
@@ -110,6 +110,7 @@ input.form-control {
   margin: 0px;
 }
 
+/*
 .loader {
   border: 16px solid #f3f3f3;
   border-radius: 50%;
@@ -131,7 +132,7 @@ input.form-control {
 }
 
 .mainloader {
-margin: 0;
+  margin: 0;
   position: absolute;
   top: 50%;
   left: 50%;
@@ -148,3 +149,4 @@ body {
 h1, h2 {
   color:  white;
 }
+*/
