--- a/mystyle.css
+++ b/mystyle.css
@@ -1,8 +1,10 @@
 /* Hides the scrollbar for x and y*/
 body {
   overflow-x: hidden;
+  overflow-y: hidden;
   -ms-overflow-style: none;
   scrollbar-width: none;
+  font-family: Arial;
 }
 
 /* Hides the scrollbar for x and y*/
@@ -14,7 +16,7 @@ body::-webkit-scrollbar {
 .button {
   border: none;
   color: white;
-  padding: 16px 45px;
+  padding: 10px 45px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
@@ -66,19 +68,16 @@ body::-webkit-scrollbar {
 
 /* Adds padding to overcome the navbar being stuck to the top*/
 .main {
-  padding-top: 70px;
+  padding-top: 80px;
   padding-bottom: 70px;
 }
 
-/* Adds padding to the top of the new videos*/
-.new_videos {
-  padding-top: 5px;
-}
-
 /* A style for the videos that are being reccomended*/
-.recommended_videos {
-  max-height: 560px;
-  overflow-y: hidden;
+.video_container {
+  padding-top: 5px;
+  padding-left: 10px;
+  max-height: 1000px;
+  overflow-y: scroll;
   background-color: aliceblue;
   padding-bottom: 5px;
   border-radius: 15px;
@@ -108,6 +107,43 @@ input.form-control {
 .thingsatthebottomoftheloginpage{
   padding-top: 10px;
   margin: 0px;
+}
+
+/* Style the tab */
+.tab {
+overflow: hidden;
+border: 1px solid #ccc;
+background-color: #d3e7ff;
+border-radius: 15px;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+background-color: inherit;
+float: left;
+border: none;
+outline: none;
+cursor: pointer;
+padding: 14px 16px;
+transition: 0.3s;
+font-size: 17px;
+}
+
+/* Change background color of buttons on hover */
+.tab button:hover {
+background-color: aliceblue;
+}
+
+/* Create an active/current tablink class */
+.tab button.active {
+background-color: #bad9ff;
+}
+
+/* Style the tab content */
+.tabcontent {
+display: none;
+padding: 6px 12px;
+border-top: none;
 }
 
 /*
